# ChangeLog for app-text/dvisvgm
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/dvisvgm/ChangeLog,v 1.71 2015/06/09 12:21:11 jlec Exp $

  09 Jun 2015; Justin Lecher <jlec@gentoo.org> metadata.xml:
  Updating remote-id in metadata.xml

  23 May 2015; Manuel Rüger <mrueg@gentoo.org> -dvisvgm-1.0.8.ebuild,
  -dvisvgm-1.0.9.ebuild:
  Remove old.

  13 Apr 2015; Alexis Ballier <aballier@gentoo.org> dvisvgm-1.9.2.ebuild:
  add missing app-text/{xmlto,asciidoc} build dep, bug #546458

*dvisvgm-1.9.2 (13 Apr 2015)

  13 Apr 2015; Alexis Ballier <aballier@gentoo.org> +dvisvgm-1.9.2.ebuild:
  version bump

*dvisvgm-1.9 (05 Jan 2015)

  05 Jan 2015; Alexis Ballier <aballier@gentoo.org> +dvisvgm-1.9.ebuild:
  version bump

*dvisvgm-1.8.1 (02 Nov 2014)

  02 Nov 2014; Alexis Ballier <aballier@gentoo.org> +dvisvgm-1.8.1.ebuild:
  version bump

*dvisvgm-1.5.2 (13 Mar 2014)

  13 Mar 2014; Alexis Ballier <aballier@gentoo.org> +dvisvgm-1.5.2.ebuild:
  version bump

  18 Jan 2014; Agostino Sarubbo <ago@gentoo.org> dvisvgm-1.4.ebuild:
  Stable for alpha, wrt bug #491940

  15 Jan 2014; Agostino Sarubbo <ago@gentoo.org> dvisvgm-1.4.ebuild:
  Stable for ia64, wrt bug #491940

  24 Dec 2013; Agostino Sarubbo <ago@gentoo.org> dvisvgm-1.4.ebuild:
  Stable for x86, wrt bug #491940

  23 Dec 2013; Agostino Sarubbo <ago@gentoo.org> dvisvgm-1.4.ebuild:
  Stable for sparc, wrt bug #491940

  22 Dec 2013; Agostino Sarubbo <ago@gentoo.org> dvisvgm-1.4.ebuild:
  Stable for ppc64, wrt bug #491940

  21 Dec 2013; Agostino Sarubbo <ago@gentoo.org> dvisvgm-1.4.ebuild:
  Stable for ppc, wrt bug #491940

  21 Dec 2013; Chema Alonso <nimiux@gentoo.org> dvisvgm-1.4.ebuild:
  Stable for amd64 wrt bug #491940

  01 Dec 2013; Markus Meier <maekke@gentoo.org> dvisvgm-1.4.ebuild:
  arm stable, bug #491940

  26 Nov 2013; Jeroen Roovers <jer@gentoo.org> dvisvgm-1.4.ebuild:
  Stable for HPPA (bug #491940).
