@@ -1,5 +1,5 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
 AUX dvisvgm-1.0.8-as-needed.patch 288 SHA256 4ca20dcda6250ef0fcdf66f0c43eaeee4f364e5b11befec9b449581b080662fc SHA512 a516a5de93bfbedda169474235dcc27c9d3e3d74317ad75f3ebe4a97d2d00be91493a6ee6b4888df4bcf51e310059ccf3c6569cedb5a22fa447b558038c37b0f WHIRLPOOL 01de017888fccc69981d858015f9bbed5ea0407da754ed3ff9da5881f56d2844d17c1ddb77119d18bfbb9ded099d209f3f54e15a27a788871d8c9d7bc7ae50cf
 AUX dvisvgm-1.0.8-darwin.patch 173 SHA256 4e0934c8f0184b1d89e806d4ebe7dd15735d946d4b0065458da9013f05fb9e86 SHA512 b27acd752ebd330b8d291bff6a230bcd49acfcbf3ac74f7bca9b43f5fb69866c4ce2e37eab522deb11760824c50a789bdf095285c9443208635e99ef8b8831bf WHIRLPOOL cd43d5b36e9557eb038d5315af2ccbf407b6cce5414fdeefdf85759a36db7d4345b6d83e10da65703ecd221e5cb140037b76e7e5730dd271b2b42d65c8f6ef3e
@@ -14,27 +14,15 @@ EBUILD dvisvgm-1.2.1.ebuild 976 SHA256 4eba53de8430f99e5c64fb5659fbb2217a4e54ac9
 EBUILD dvisvgm-1.3.ebuild 984 SHA256 d3ba5d801c6225825f927d60dcab49d7c9cb2cc1f250e5c902f0c48b68a5886c SHA512 fbb11a4d54b9c6e898a80321e72d1a83a9a2777737d663e1f76fa280a3bb54bf658339ef991e9a6dd710b4d94deaa648a89b9bc7e024af7b6417997db3ff1e7d WHIRLPOOL ce455d8a6a1fe63ed3f37c0c9f8586abc7f846a8cad6e13795c283ba5da4fb2918a266f3545b2b824a69041f24d7313bcd253b2f8f4573d6f5d69f147c6ac187
 EBUILD dvisvgm-1.4.ebuild 973 SHA256 aaea88b2dbe4f95f62d19ae6a2bd40aea3c41aac9b1b3e627121c79a16a4247f SHA512 15b8fd8952600edc64258f126dadc85b5a36bb24e8c0dcbb816ecda3e9d286c72aaa61459ab7d624546a3d78396f8b0e4863c08b5218d3710c32c286d383ad34 WHIRLPOOL 540d9a2b6f9a5baf2c91e77133549157fc6474595b250ed67bc6c0e4fb6c6a7b3aa0a2960715703a786fd7d8640654fb641aeaeae35671bc8e2a34ffb41a4951
 EBUILD dvisvgm-1.5.2.ebuild 988 SHA256 71ddbe43533279788f62bd9c87e6ea00632bda466343f4913057cf38f8b22cb8 SHA512 28036e73b67234e5d3661185b9ad94d20f70f9324bbdd3404afe2d2114e3251e18c752fc1b908cc51fe6229bb7655bb55967218830c97d174d7190f2c872b95f WHIRLPOOL b4b4bc89b1af270bbfe42ea64a6d93812ce7f5c3afc86da6df844d3af72d91116098ec5c6c8584b68fe6c52c64cf84b4fb55c311e72c121de1d868055ef5a431
-EBUILD dvisvgm-1.8.1.ebuild 988 SHA256 bcf502a7e452ac96f17782328f212b02db345663ee8b53e73d24f26d0776dd3d SHA512 fc026d8c587ba4550cec2da30d781d17fa24d6ebe24e5de9f2a5881eee2be5a5e1caa788df35f7a9be9aeaa351ac8b25dbbd373222f37c675d11025016bc9ab9 WHIRLPOOL c0f16b4fc6b3c592e7c20337282e77812c249f1a7b932d9df532cb535baef7faa70c9556421e15582097078d7c91c6b9dbb4f47b664d29ff7148b08543b72a15
+EBUILD dvisvgm-1.8.1.ebuild 985 SHA256 88a3001c5eef5e9bd0166135c38d40e54e3d5c6e21ebce871f0b43502956bef6 SHA512 b34ea18ff6822367bf3fa1f35fd939c24a7dea3ca4bf170bca3816d3057a8be76f7b4c66c86a57f1e9a39a1671fff651db180108eceabf7a5c296fb47410b429 WHIRLPOOL 8b49d14c6706e0b2ae7c6fdaf41ba25facd742f46802a0b705cd9c427fc5b762f4932659fd94cb9cd8bb69c43d44220243eb6de9c8f60261c29aedb5b08c7530
 EBUILD dvisvgm-1.9.2.ebuild 1023 SHA256 77c688a35da357c5ccb37ece2f7d1d7b453ea6d90c1e121ce119118a3d753a54 SHA512 f2f741782c24416acd004a5c9c2b865ac30fc62f7d06a38bf0e078355b29c481e9cdc54ecbf44bdd7bcdf8096279e5f3bc7c8d5047b7de3dda8b96ada263a4e7 WHIRLPOOL 268e597c90c4adfb746ba8a5db53e9288f4c51dffb330222abc5108a406877aaedea677a52950c85cc161b38798babf54335731e0d8f171c59f3f5a291886c82
 EBUILD dvisvgm-1.9.ebuild 986 SHA256 18ddd4d0ef7160510bf46db5e49e7ded35128946a148dc0340df9324d70f2a05 SHA512 452c9dffa0b7328dd074519b8d340d0bf3d0ff5256725ec7ad3d27d8ab35e17f00cf274242db66d0bd6d9fe8b897ba2108172b423f0862ad4d74c8984081606b WHIRLPOOL d085ab7b06b449fd086f1775bde1599fa1d96c13f00b5c5a4852a5c9c6bd7ac1fef6e67dc6eb9dbf7777212b9fef880320c443249062ce9daeecf50e5e34c0d6
-MISC ChangeLog 8651 SHA256 45ff4c3e961554e51b8bfe088fbc8f41c74b266d771c854b50df8966402d6343 SHA512 f08d58b3d58d8321c0f5cd75885ac9fbd737d7c2603c492997ff2033f1be024abe7319bf6950ba5fb32d39cdf8bebcefb0caebc7ce63e2998135ffc1a4e97f77 WHIRLPOOL 1b0cd01407615f78a20af3b2100fd80afa9fe0b48bf0b582dd9d4ff91ad393b0e1f719a0f545895b506c3568cca0c93d3b2c5e3321071d6306aad421561aa652
+MISC ChangeLog 8750 SHA256 101a4535af74d16df09a59fbf59d69b7213b55c79ed9b984b6d1602ce3260aaa SHA512 cf09520ded682d3ce77a1d49e4aaa8a6d609b2641347c1a4f2ef1f496a78f8aceb13db84a0d4115374cbb3db54f7992c5701359af9cffaa32a7c3741179a00af WHIRLPOOL 920d010d4196131d1a9246f9e39561b5f18849db52f6d98c93da4e5a147513622ec1337ce1f1be9d1b8ca8f3d52b60ab150ea3aed7e98d861a951177f50158d7
 MISC metadata.xml 234 SHA256 0e0eccaa40dfb42039e4e79c3b71eb376fed83bef49fe0ddba9497a9e7a8cd14 SHA512 efa0b411d285364f969694a669aeea789fce75977ffde0303222bff0782e1d3f1c7c4b303846108014a57c547f161422958e3a6043321ee6030bd60192048873 WHIRLPOOL 4ba588828a8bb226be4e299f2b55b5d07be8a0cb2762b278b1d4a5fa3e1efd8f2eb02fb745549fad4164d26ae0d09129058167f0345df38e194a4e11996043ae
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0
+Version: GnuPG v2
 
-iQJ8BAEBCgBmBQJVdto4XxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ0QUU0N0I4NzFERUI0MTJFN0EyODE0NUFF
-OTQwMkE3OUIwMzUyOUEyAAoJEOlAKnmwNSmiyGMP/00UAOmLxNXtgVExn4djMmh/
-2ba7dKV7rXq/SsN3pf53u7lsBVc/+Mkft1N3lFwLlpv4fufvNNMFdch2+Y6yK0EL
-wCRNA75SFBIDOFSP3bz9M4tn0Cz0A0daJNj0yVnJjHILBDkQq+70X/tsx6o5KHeD
-GPQuSbMu5kd8t3SpCK90QN8yXE2S516bvvVsptVkQh8HYjHtaCKc8s3lTYprTKo5
-ud6z/Hhrw+T3KdVecLk4IqgG0JUpawR868lbzxVbjQVXQYgxpKV/+S9y4twW6tAy
-KqJx0gjOFwn3F6VveGB24TIElKT73mkAY6ogLi33Vh3C2YJD4oNnzw4hZHx/N7Ir
-BcvzjrloMJwIag5n6qW4ZIH3E1ysl4LpPKAQ99GdP8F5kRVy6T8k/wuL+YtnMKCq
-Syrj+4lTf5YiynfPSTmdZpVLfcRpA8hPIgP/lNpwK0v508rMfG9PaXMkmbWyMsAa
-KUcvOll6R2OnNAQpReMd/pheBMCzmRyd91rbR/6g1+pk6sBWmWLx/zLBo8SdSZrO
-GabRYasTqDr0LOKKJhtcu8nVr9LV3WMme21nq2FmzToFHb0ZW5MiMzGQJeyFARZc
-bVAQodoXNy9m9ucC3vvcMnjRGTLOB9pFSKB0UjNSw3HUb1q10H74OrLNBhyF7vdX
-p4LBNOkOBv0RMGdnDr9P
-=4tAH
+iEYEAREIAAYFAlV3MHsACgkQkKaRLQcq0GIMEwCeKGiyhWI42ZGjDMbEea5SQvMm
+qMgAn0S6B6gtQcoydqb7e7vA2oTK+bee
+=fPgX
 -----END PGP SIGNATURE-----
