@@ -1,6 +1,9 @@
 # ChangeLog for app-text/dvisvgm
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/dvisvgm/ChangeLog,v 1.71 2015/06/09 12:21:11 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/dvisvgm/ChangeLog,v 1.72 2015/06/09 18:29:13 maekke Exp $
+
+  09 Jun 2015; Markus Meier <maekke@gentoo.org> dvisvgm-1.8.1.ebuild:
+  arm stable, bug #534906
 
   09 Jun 2015; Justin Lecher <jlec@gentoo.org> metadata.xml:
   Updating remote-id in metadata.xml
